command-line without specified filename doesn't renders #41962

Closed
opened 2014-09-26 10:03:30 +02:00 by Janek Domański · 6 comments

System Information
tested on Windows XP 32 bit professional, Windows 7 64 bit professional

Blender Version
Broken:
2.71 d919218
2.72 eb464ee http://download.blender.org/release/Blender2.72/blender-2.72-rc-windows32.exe
2.72 fe42ceb https://builder.blender.org/download/blender-2.72-fe42ceb-win32.zip

Worked:
2.71 9337574

Short description of error
According to wiki and blender.exe --help
Option -o must have specified filename ("-o Set the render path and file name"). In Blender 2.71 9337574 and previous path specified without filename works fine. Render is saved just in specified directory. In Blender 2.71 d919218 and next Blenders this doesn't works. Blender just quits and don't produces any warnings. I expect that if option -o really must have specified filename - then Blender must prints warning when specified path is directory. Or just renders as previously.

Exact steps for others to reproduce the error
run command:
"c:\Program Files\Blender Foundation\Blender\blender.exe" -b c:\tmp\untitled.blend -o c:\tmp\ -f 1
What happens: Blender Quit - don't render.
Expected behavior:
a) just render frame and save to c:\tmp\0001.png
b) print warning/error

Workaround
run command:
"c:\Program Files\Blender Foundation\Blender\blender.exe" -b c:\tmp\untitled.blend -o c:\tmp#### -f 1

**System Information** tested on Windows XP 32 bit professional, Windows 7 64 bit professional **Blender Version** Broken: 2.71 d919218 2.72 eb464ee http://download.blender.org/release/Blender2.72/blender-2.72-rc-windows32.exe 2.72 fe42ceb https://builder.blender.org/download/blender-2.72-fe42ceb-win32.zip Worked: 2.71 9337574 **Short description of error** According to wiki and blender.exe --help Option -o must have specified filename ("-o Set the render path and file name"). In Blender 2.71 9337574 and previous path specified without filename works fine. Render is saved just in specified directory. In Blender 2.71 d919218 and next Blenders this doesn't works. Blender just quits and don't produces any warnings. I expect that if option -o really must have specified filename - then Blender must prints warning when specified path is directory. Or just renders as previously. **Exact steps for others to reproduce the error** run command: "c:\Program Files\Blender Foundation\Blender\blender.exe" -b c:\tmp\untitled.blend -o c:\tmp\ -f 1 What happens: Blender Quit - don't render. Expected behavior: a) just render frame and save to c:\tmp\0001.png b) print warning/error **Workaround** run command: "c:\Program Files\Blender Foundation\Blender\blender.exe" -b c:\tmp\untitled.blend -o c:\tmp\#### -f 1

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @Janek-10

Added subscriber: @Janek-10

This issue was referenced by 8f6a993769

This issue was referenced by 8f6a99376961175a02d94088cc5df3feeb762e36

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 8f6a993769.

Closed by commit 8f6a993769.

This issue was referenced by 7af5bd0b3a

This issue was referenced by 7af5bd0b3a5663049105e28b516ca97a37614c80
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41962
No description provided.